@@ -1,5 +1,15 @@
 2013-01-10  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Support Apple FAT binaries on non-Apple platforms.
+
+	* include/grub/macho.h (GRUB_MACHO_FAT_EFI_MAGIC): New define.
+	* include/grub/i386/macho.h (GRUB_MACHO_CPUTYPE_IS_HOST_CURRENT):
+	Likewise.
+	* grub-core/loader/efi/chainloader.c (grub_cmd_chainloader): Parse
+	Apple FAT binaries.
+
+2013-01-10  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/kern/disk.c (grub_disk_write): Fix sector number on 4K
 	sector devices.
 
